--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="record">SwayangRecord</string>
+    <string name="record">SwayangVideoRecord</string>
     <string name="stop">Stop</string>
     <string name="description_info">Info</string>
 </resources>
